# polar-python

./: .genignore  .gitignore  LICENSE  README.md  RELEASES.md  USAGE.md  codeSamples.yaml  llms-full.txt  llms.txt  pylintrc  pyproject.toml  ruff.toml
.devcontainer/: README.md  setup.sh
.github/scripts/: generate_llms_files.py
.github/workflows/: generate-llms-txt.yml  sdk_generation.yaml  sdk_publish.yaml  trigger_docs.yaml
.speakeasy/: gen.yaml  workflow.yaml
.zed/: settings.json
docs/models/: account.md  accountcreate.md  accountlink.md  accountscreatesecurity.md  accountsdashboardlinkrequest.md  accountsdashboardlinksecurity.md  accountsgetrequest.md  accountsgetsecurity.md  accountsonboardinglinkrequest.md  accountsonboardinglinksecurity.md  accountssearchrequest.md  accountssearchsecurity.md  accounttype.md  activesubscriptions.md  activeuserbyevent.md  address.md  addresscountryalpha2.md  addressdict.md  addressinput.md  addressinputcountryalpha2input.md  advertisementcampaign.md  advertisementcampaignlistresource.md  advertisementsgetrequest.md  advertisementslistqueryparamsorting.md  advertisementslistrequest.md  advertisementslistresponse.md  advertisementsortproperty.md  aggregation.md  aggregationfunction.md  alreadyactivesubscriptionerror.md  alreadycanceledsubscription.md  alreadycanceledsubscriptionerror.md  alreadycanceledsubscriptiontype.md  alreadysubscribed.md  alreadysubscribedtype.md  ambiguousexternalcustomerid.md  amount.md  amounttype.md  annualrecurringrevenue.md  article.md  (+2080 more)
scripts/: prepare-readme.py  prepare_readme.py
(+1956 files in other folders)
