[project]
name = "polar-sdk"
version = "0.19.0"
description = "Polar SDK for Python"
authors = [{ name = "Polar" },]
readme = "README-PYPI.md"
requires-python = ">=3.9.2"
dependencies = [
    "httpx >=0.28.1",
    "jsonpath-python >=1.0.6",
    "pydantic >=2.11.2",
    "standardwebhooks (>=1.0.0,<2.0.0)",
]

[tool.poetry]
repository = "https://github.com/polarsource/polar-python.git"
packages = [
    { include = "polar_sdk", from = "src" }
]
include = ["py.typed", "src/polar_sdk/py.typed"]

[tool.setuptools.package-data]
"*" = ["py.typed", "src/polar_sdk/py.typed"]

[virtualenvs]
in-project = true

[tool.poetry.group.dev.dependencies]
mypy = "==1.15.0"
pydantic-ai-slim = "^0.1.0"
pylint = "==3.2.3"
pytest = "^8.3.3"
ruff = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["src"]

[tool.mypy]
disable_error_code = "misc"

[[tool.mypy.overrides]]
module = "typing_inspect"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jsonpath"
ignore_missing_imports = true

[tool.pyright]
venvPath = "."
venv = ".venv"


